UX: Fix short post width on mobile (#14771)

--- a/app/assets/stylesheets/mobile/topic.scss
+++ b/app/assets/stylesheets/mobile/topic.scss
@@ -1,3 +1,8 @@
+.container.posts {
+  grid-template-areas: "posts";
+  grid-template-columns: auto;
+}
+
 .post-info a {
   color: var(--primary-medium);
 }
